; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_lockstat.c_lockstat_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_lockstat.c_lockstat_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCKSTAT_MAJOR = common dso_local global i32 0, align 4
@lockstat_cdevsw = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"lockstat_init: failed to allocate a major number!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lockstat_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @LOCKSTAT_MAJOR, align 4
  %3 = call i32 @cdevsw_add(i32 %2, i32* @lockstat_cdevsw)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  br label %13

8:                                                ; preds = %0
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = inttoptr i64 %10 to i32*
  %12 = call i32 @lockstat_attach(i32* %11)
  br label %13

13:                                               ; preds = %8, %6
  ret void
}

declare dso_local i32 @cdevsw_add(i32, i32*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @lockstat_attach(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
